--- a/ng-directives/src/app/app.component.html
+++ b/ng-directives/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <h1>Directives</h1>
-  <h1 style="text-align: center">For loop</h1>
+  <!-- <h1 style="text-align: center">For loop</h1>
   <ul>
     <li *ngFor="let num of numList">{{ num }}</li>
-  </ul>
+  </ul> -->
   <!-- <h1>Todos</h1>
   <ul class="list-group">
     <li class="list-group-item" *ngFor="let todo of todos">
@@ -48,7 +48,7 @@
       <h2>{{ loaderMessage }}</h2>
     </div>
   </ng-template> -->
-  <h1>Switch case</h1>
+  <!-- <h1>Switch case</h1>
   <h1 style="text-align: center;">Swich case </h1>
   <input [(ngModel)]="input">
   <button (click)="showFeedback()">Show Feedback</button>
@@ -71,7 +71,10 @@
     </ng-template>
     <ng-template ngSwitchDefault>
         <h3>Your input is not matching</h3>
-    </ng-template>
-</div>
+    </ng-template> -->
+<!-- </div> -->
 
+<!-- <h1 appHighlight >Highlight Directive</h1>
+<p appHighlight >This is para</p> -->
+<app-template-reference></app-template-reference>
 </div>
